# maya-fake-tools

./: .gitignore  CLAUDE.md  DEVELOP.md  LICENSE  LOFT_SURFACE_CREATOR.md  LOGGING_USAGE.md  PIE_MENU_USAGE.md  README.md  README_JP.md  SETTINGS_USAGE.md  faketools.mod  pyproject.toml
.github/workflows/: release.yml
docs/: README.md  build.py  config.yaml
docs/css/: style.css
docs/js/: main.js
docs/output/: index.html  index_en.html
docs/output/css/: style.css
docs/output/en/: index.html
docs/output/en/common/: code_editor.html  code_editor_editor.html  code_editor_file_explorer.html  code_editor_settings.html  code_editor_terminal.html  code_editor_toolbar.html  gltf_importer.html  node_stocker.html  scene_optimizer.html  selecter.html  singleCommands.html  snapshot_capture.html
docs/output/en/model/: boundingbox_creator.html  (+5 more)
docs/output/ja/: index.html
docs/src/en/: index.md
docs/src/ja/: index.md
docs/templates/: footer.html  header.html  index.html  page.html
plug-ins/: skinClusterWeight.py
scripts/faketools/: __init__.py  config.py  logging_config.py  menu.py  module_cleaner.py  single_commands_menu.py
scripts/faketools/core/: __init__.py  registry.py
scripts/faketools/lib/: __init__.py  lib_attribute.py  lib_cluster.py  lib_componentfilter.py  lib_keyframe.py  lib_math.py  lib_memberShip.py  lib_mesh.py  lib_mesh_conversion.py  lib_mesh_edge.py  lib_mesh_face.py  lib_mesh_point.py  lib_mesh_vertex.py  lib_name.py  lib_nurbsCurve.py  lib_nurbsCurve_convert.py  lib_nurbsCurve_positions.py  lib_nurbsSurface.py  lib_optimize.py  lib_retarget.py  lib_selection.py  lib_shape.py  lib_skinCluster.py  lib_transform.py
scripts/faketools/lib_ui/: __init__.py  base_window.py  icons.py  maya_decorator.py  maya_dialog.py  maya_qt.py  maya_ui.py  optionvar.py  pie_menu.py  preset_edit_dialog.py  preset_menu_manager.py  preset_save_dialog.py  qt_compat.py  tool_data.py  tool_settings.py  ui_utils.py
scripts/faketools/operations/: __init__.py  component_selection.py  convert_weight.py  copy_weights.py  mirror.py
scripts/faketools/single_commands/: __init__.py  all_commands.py  base_commands.py  pair_commands.py  scene_commands.py
scripts/faketools/tools/: __init__.py
(+332 files in other folders)
