[project]
name = "maya-fake-tools"
version = "0.1.0"
description = "Maya tools packages."
readme = "README.md"
requires-python = ">=3.11.4"
dependencies = [
    "ruff>=0.13.3",
]

[tool.ruff]
line-length = 150
target-version = "py311"
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E203", "E501", "E701", "SIM108"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
